--- a/app/system/modules/theme/less/uikit/form-advanced.less
+++ b/app/system/modules/theme/less/uikit/form-advanced.less
@@ -7,12 +7,16 @@
 // Variables
 // ========================================================================
 
-@form-advanced-border:                        #bbb;
+@form-advanced-size:                          16px;
+@form-advanced-border:                        #D5D5D5;
 @form-advanced-color:                         #fff;
 
 @form-advanced-checked-color:                 #fff;
 
 @form-advanced-radio-size:                    4px;
+
+@form-advanced-checkbox-icon:                 "";
+@form-advanced-checkbox-indeterminate-icon:   "";
 
 
 // Component
@@ -24,7 +28,10 @@
 
 .hook-form-advanced-radio() {}
 
-.hook-form-advanced-checkbox() {}
+.hook-form-advanced-checkbox() {
+    height: @form-advanced-size;
+    background: url("@{global-image-path}/checkbox-check.svg") 0 0 no-repeat;
+}
 
 .hook-form-advanced-disabled() {}
 
@@ -37,12 +44,16 @@
     .uk-form input[type="checkbox"] { border-radius: 2px; }
 
     .uk-form input[type="radio"]:checked,
-    .uk-form input[type="checkbox"]:checked {
+    .uk-form input[type="checkbox"]:checked,
+    .uk-form input[type=checkbox]:indeterminate {
         border-color: transparent;
-        background: @global-primary-background;
+        background: @global-success-background;
     }
 
-    .uk-form input[type=checkbox]:indeterminate:before { color: @global-primary-background; }
+    .uk-form input[type=checkbox]:indeterminate:before {
+        height: @form-advanced-size;
+        background: url("@{global-image-path}/checkbox-indeterminate.svg") 0 0 no-repeat;
+    }
 
     .uk-form input[type=radio]:disabled:checked,
     .uk-form input[type=checkbox]:disabled:checked,
