added pk-icon-warning + pk-icon-edit + updated role and permission view

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -124,6 +124,8 @@
 .pk-icon-block { background-image: url("../../assets/images/icon-block.svg"); }
 .pk-icon-check { background-image: url("../../assets/images/icon-check.svg"); }
 .pk-icon-copy { background-image: url("../../assets/images/icon-copy.svg"); }
+.pk-icon-warning { background-image: url("../../assets/images/icon-warning.svg"); }
+.pk-icon-edit { background-image: url("../../assets/images/icon-edit.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
