added bg color to login

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -195,7 +195,7 @@ body {
 /* Pages for login, error, etc
  ========================================================================== */
 
-.tm-background { background: url("../images/login.jpg") 50% 50% no-repeat; }
+.tm-background { background: lighten(@global-primary-background, 10%) url("../images/login.jpg") 50% 50% no-repeat; }
 
 /*
  * Helper class
