--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -195,13 +195,10 @@ body {
 /* Pages for login, error, etc
  ========================================================================== */
 
-.tm-background { background: lighten(@global-primary-background, 10%) url("../images/login.jpg") 50% 50% no-repeat; }
-
-/*
- * Helper class
- */
-
-.tm-height-4-5 { height: 80vh; }
+.tm-background {
+    background: lighten(@global-primary-background, 10%) url("../images/login.jpg") 50% 50% no-repeat;
+    background-size: cover;
+}
 
 /*
  * Container
