--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -136,6 +136,17 @@
 .pk-icon-arrow-up { background-image: url("../../assets/images/icon-arrow-up.svg"); }
 .pk-icon-arrow-down { background-image: url("../../assets/images/icon-arrow-down.svg"); }
 
+[class*='pk-icon-circle-'] {
+    width: 12px;
+    height: 12px;
+    border-radius: 50px;
+}
+
+.pk-icon-circle { background-color: @global-primary-background; }
+.pk-icon-circle-success { background-color: @global-success-background; }
+.pk-icon-circle-danger { background-color: @global-danger-background; }
+.pk-icon-circle-muted { background-color: @global-muted-color; }
+
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
 
 /*
