updated dashboard widgets markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -384,6 +384,14 @@
 }
 
 
+/* Panel Teaser
+ ========================================================================== */
+
+.pk-panel-teaser {
+    margin: @panel-box-teaser-margin @panel-box-teaser-margin @panel-teaser-margin-bottom @panel-box-teaser-margin;
+    padding: @panel-box-padding;
+    border-bottom: 1px solid @global-border;
+}
 
 
 
