cleanup comments view

--- a/extensions/blog/assets/css/blog.admin.css
+++ b/extensions/blog/assets/css/blog.admin.css
@@ -5,4 +5,4 @@
 /* Comment view
  ========================================================================== */
 
-.pk-blog-comments-margin { margin-top: 11px !important; }
+.pk-blog-comments-padding { padding-top: 27px !important; }
