added pk-icon-schedule, spam + comment

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -126,6 +126,9 @@
 .pk-icon-copy { background-image: url("../../assets/images/icon-copy.svg"); }
 .pk-icon-warning { background-image: url("../../assets/images/icon-warning.svg"); }
 .pk-icon-edit { background-image: url("../../assets/images/icon-edit.svg"); }
+.pk-icon-comment { background-image: url("../../assets/images/icon-comment.svg"); }
+.pk-icon-schedule { background-image: url("../../assets/images/icon-schedule.svg"); }
+.pk-icon-spam { background-image: url("../../assets/images/icon-spam.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
