minor markup + css fixes

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -164,7 +164,11 @@
  * Link Hover with Icon and Text
  */
 
-.pk-link-icon { color: @global-muted-color; }
+.pk-link-icon {
+    display: inline-block;
+    color: @global-muted-color;
+}
+
 .pk-link-icon:hover { color: @global-color; }
 
 .pk-link-icon [class*='pk-icon-'] { opacity: 0.3; }
