updated uk-icon-circle to pk-icon-circle + added pk-icon-circle-warning

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -149,6 +149,7 @@
 .pk-icon-circle-primary { background-color: @global-primary-background; }
 .pk-icon-circle-success { background-color: @global-success-background; }
 .pk-icon-circle-danger { background-color: @global-danger-background; }
+.pk-icon-circle-warning { background-color: @global-warning-background; }
 
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
 
