added list + thumbnail display option to dashboard user widget

--- a/app/system/modules/theme/less/uikit/button.less
+++ b/app/system/modules/theme/less/uikit/button.less
@@ -136,6 +136,8 @@
 
 .hook-button-misc() {
 
+    .uk-button-link:focus { outline: none; }
+
     /* Sub-object `uk-button-group`
      ========================================================================== */
 
