updated notify+ text.less color variables with global color variables

--- a/app/system/modules/theme/less/uikit/notify.less
+++ b/app/system/modules/theme/less/uikit/notify.less
@@ -16,16 +16,16 @@
 @notify-message-line-height:                    round((@notify-message-font-size * 1.37)); // 22px
 
 @notify-message-primary-background:             @notify-message-background;
-@notify-message-primary-color:                  #4091D2;
+@notify-message-primary-color:                  @global-link-color;
 
 @notify-message-success-background:             @notify-message-background;
-@notify-message-success-color:                  #80c96d;
+@notify-message-success-color:                  @global-success-background;
 
 @notify-message-warning-background:             @notify-message-background;
 @notify-message-warning-color:                  #ff9a2e;
 
 @notify-message-danger-background:              @notify-message-background;
-@notify-message-danger-color:                   #F05D54;
+@notify-message-danger-color:                   @global-danger-background;
 
 
 // Component
