--- a/app/system/modules/theme/less/uikit/variables.less
+++ b/app/system/modules/theme/less/uikit/variables.less
@@ -39,13 +39,13 @@
 @global-primary-hover-background:               #3e91d7;
 @global-primary-active-background:              #3589cf;
 
-@global-success-background:                     #80c96d;
-@global-success-hover-background:               #6dbc58;
-@global-success-active-background:              #61b54c;
+@global-success-background:                     #3DC372;
+@global-success-hover-background:               #23b25c;
+@global-success-active-background:              #0fa74c;
 
-@global-danger-background:                      #f0615b;
-@global-danger-hover-background:                #e54f49;
-@global-danger-active-background:               #da443e;
+@global-danger-background:                      #e44e56;
+@global-danger-hover-background:                #db353f;
+@global-danger-active-background:               #d2232d;
 
 @global-warning-background:                     #FFB24E;
 
