--- a/app/system/modules/theme/less/uikit/text.less
+++ b/app/system/modules/theme/less/uikit/text.less
@@ -13,10 +13,10 @@
 @text-large-line-height:                        round((@text-large-font-size * 1.32)); // 24px / 26px
 
 @text-muted-color:                              @global-muted-color;
-@text-primary-color:                            #4091D2;
-@text-success-color:                            #80c96d;
+@text-primary-color:                            @global-link-color;
+@text-success-color:                            @global-success-background;
 @text-warning-color:                            #ff9a2e;
-@text-danger-color:                             #F05D54;
+@text-danger-color:                             @global-danger-background;
 @text-contrast-color:                           @global-contrast-color;
 
 
