--- a/app/system/modules/theme/less/uikit/panel.less
+++ b/app/system/modules/theme/less/uikit/panel.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@panel-title-margin-bottom:                     @global-margin-large;
+@panel-title-margin-bottom:                     @global-margin;
 @panel-title-font-size:                         round((@global-font-size * 1.28)); // 18px / 20px
 @panel-title-line-height:                       round((@panel-title-font-size *  1.32)); // 24px / 26px
 @panel-title-font-weight:                       300;
