updated subnav spacing in nav-side

--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -94,7 +94,7 @@
 // Items
 //
 
-.hook-nav-side() {}
+.hook-nav-side() { padding: 8px 16px; }
 
 // Hover
 .hook-nav-side-hover() {}
@@ -210,7 +210,7 @@
 
     .uk-nav-side .uk-subnav {
         position: absolute;
-        top: 4px;
+        top: 6px;
         right: 15px;
     }
 
