--- a/app/system/modules/theme/less/uikit/panel.less
+++ b/app/system/modules/theme/less/uikit/panel.less
@@ -18,6 +18,7 @@
 @panel-box-background:                          #fff;
 @panel-box-color:                               @global-color;
 @panel-box-title-color:                         @global-color;
+@panel-box-badge-top:                           15px;
 
 @panel-box-primary-background:                  #f5f5f5;
 @panel-box-primary-color:                       @global-color;
