--- a/app/system/modules/finder/app/components/table.html
+++ b/app/system/modules/finder/app/components/table.html
@@ -1,5 +1,5 @@
 <div class="uk-overflow-container">
-    <table class="uk-table uk-table-hover uk-table-middle pk-finder-table">
+    <table class="uk-table uk-table-hover uk-table-middle">
         <thead>
             <th class="pk-table-width-minimum"><input type="checkbox" v-check-all="selected: input[name=name]"></th>
             <th colspan="2">{{ 'Name' | trans }}</th>
@@ -11,7 +11,7 @@
             <tr v-repeat="items | folders | searched" class="uk-visible-hover" v-on="click: toggleSelect">
                 <td><input type="checkbox" name="name" value="{{ name }}"></td>
                 <td class="pk-table-width-minimum">
-                    <i class="uk-icon-folder-o pk-finder-icon-folder"></i>
+                    <i class="pk-icon-folder pk-icon-muted"></i>
                 </td>
                 <td class="pk-table-text-break pk-table-min-width-200"><a v-on="click: setPath(path)">{{ name }}</a></td>
                 <td></td>
@@ -21,8 +21,8 @@
             <tr v-repeat="items | files | searched" class="uk-visible-hover" v-on="click: toggleSelect">
                 <td><input type="checkbox" name="name" value="{{ name }}"></td>
                 <td class="pk-table-width-minimum">
-                    <i v-if="isImage(url)" class="pk-thumbnail-icon pk-finder-icon-file" style="background-image: url('{{ encodeURI(url) }}');"></i>
-                    <i v-if="!isImage(url)" class="uk-icon-file-o pk-finder-icon-file"></i>
+                    <i v-if="isImage(url)" class="pk-icon-thumbnail" style="background-image: url('{{ encodeURI(url) }}');"></i>
+                    <i v-if="!isImage(url)" class="pk-icon-file pk-icon-muted"></i>
                 </td>
                 <td class="pk-table-text-break pk-table-min-width-200">{{ name }}</td>
                 <td class="uk-text-right uk-text-nowrap">{{ size }}</td>
