--- a/app/system/modules/finder/app/components/thumbnail.html
+++ b/app/system/modules/finder/app/components/thumbnail.html
@@ -1,6 +1,6 @@
-<ul v-if="items.length" class="uk-grid uk-grid-width-small-1-2 uk-grid-width-large-1-3 uk-grid-width-xlarge-1-4 pk-thumbnail-border-remove" data-uk-grid-margin data-uk-grid-match="{ target:'.uk-panel' }">
+<ul v-if="items.length" class="uk-grid uk-grid-width-small-1-2 uk-grid-width-large-1-3 uk-grid-width-xlarge-1-4" data-uk-grid-margin data-uk-grid-match="{ target:'.uk-panel' }">
     <li v-repeat="items | folders | searched" v-on="click: toggleSelect">
-        <div class="uk-panel uk-panel-box uk-text-center uk-visible-hover">
+        <div class="uk-panel uk-panel-box uk-text-center">
             <div class="uk-panel-teaser">
                 <div class="pk-thumbnail pk-thumbnail-folder"></div>
             </div>
@@ -12,7 +12,7 @@
     </li>
 
     <li v-repeat="items | files | searched" v-on="click: toggleSelect">
-        <div class="uk-panel uk-panel-box uk-text-center uk-visible-hover">
+        <div class="uk-panel uk-panel-box uk-text-center">
             <div class="uk-panel-teaser">
                 <div v-if="isImage(path)" class="pk-thumbnail" style="background-image: url('{{ encodeURI(url) }}');"></div>
                 <div v-if="!isImage(path)" class="pk-thumbnail pk-thumbnail-file"></div>
