added confirm icon to dashboard widgets

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -198,7 +198,11 @@
  * Dashboard Confirm
  */
 
-.uk-active .pk-icon-confirm {}
+.uk-active .pk-icon-confirm {
+    display: inline-block !important;
+    visibility: visible !important;
+    background-image: url("../../assets/images/icon-check.svg")
+}
 
 
 /* Modifier `pk-subnav-icon`
