update table + thumbnails icon in finder view

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -121,7 +121,7 @@
     vertical-align: middle;
 }
 
-.pk-icon-thumbnail { background-size: contain; }
+.pk-icon-contain { background-size: contain; }
 
 .pk-icon-delete { background-image: url("../../assets/images/icon-delete.svg"); }
 .pk-icon-block { background-image: url("../../assets/images/icon-block.svg"); }
@@ -133,6 +133,8 @@
 .pk-icon-comment { background-image: url("../../assets/images/icon-comment.svg"); }
 .pk-icon-schedule { background-image: url("../../assets/images/icon-schedule.svg"); }
 .pk-icon-spam { background-image: url("../../assets/images/icon-spam.svg"); }
+.pk-icon-thumbnails { background-image: url("../../assets/images/icon-thumbnails.svg"); }
+.pk-icon-table { background-image: url("../../assets/images/icon-table.svg"); }
 .pk-icon-file { background-image: url("../../assets/images/icon-file.svg"); }
 .pk-icon-folder { background-image: url("../../assets/images/icon-folder.svg"); }
 
