refactored dashboard widgets delete action + icon

--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -212,6 +212,7 @@
         position: absolute;
         top: 6px;
         right: 15px;
+        padding: 0;
     }
 
     /* Needed if uk-subnav is used to keep style on hover */
