better comment table padding

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -227,6 +227,16 @@
 .pk-overlay-border { border: 1px dashed #ddd; }
 
 
+/* Modifier `pk-table-large`
+========================================================================== */
+
+.pk-table-large th,
+.pk-table-large td {
+    padding-top: 28px;
+    padding-bottom: 28px;
+}
+
+
 /* Sub-modifier `pk-table-width-*`
 ========================================================================== */
 
