added icon-table, thumbnails + folder primary and updated finder

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -129,7 +129,6 @@
 .pk-icon-copy { background-image: url("../../assets/images/icon-copy.svg"); }
 .pk-icon-warning { background-image: url("../../assets/images/icon-warning.svg"); }
 .pk-icon-edit { background-image: url("../../assets/images/icon-edit.svg"); }
-.pk-icon-edit2 { background-image: url("../../assets/images/icon-edit2.svg"); }
 .pk-icon-comment { background-image: url("../../assets/images/icon-comment.svg"); }
 .pk-icon-schedule { background-image: url("../../assets/images/icon-schedule.svg"); }
 .pk-icon-spam { background-image: url("../../assets/images/icon-spam.svg"); }
@@ -137,7 +136,9 @@
 .pk-icon-table { background-image: url("../../assets/images/icon-table.svg"); }
 .pk-icon-file { background-image: url("../../assets/images/icon-file.svg"); }
 .pk-icon-folder { background-image: url("../../assets/images/icon-folder.svg"); }
+.pk-icon-reply { background-image: url("../../assets/images/icon-reply.svg"); }
 
+.pk-icon-primary.pk-icon-folder { background-image: url("../../assets/images/icon-folder-primary.svg"); }
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
 
 .pk-icon-arrow-up,
