fixed form advanced disabled checkbox

--- a/app/system/modules/theme/less/uikit/form-advanced.less
+++ b/app/system/modules/theme/less/uikit/form-advanced.less
@@ -62,4 +62,7 @@
         background-color: transparent;
     }
 
+    .uk-form input[type=checkbox]:disabled:checked:before { background: url("@{global-image-path}/checkbox-check-disabled.svg") 0 0 no-repeat;}
+
 }
+
