updated dashboard sortable markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -98,6 +98,17 @@
     color: @global-color;
 }
 
+/* Dashboard Sortable
+========================================================================== */
+
+.pk-sortable {
+    padding: 0;
+    list-style: none;
+    min-height: 300px;
+}
+
+.pk-sortable > li + li { margin-top: @grid-gutter-vertical; }
+
 
 /* Modifier: Search
 ========================================================================== */
