fixed default icon circle css

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -162,17 +162,17 @@
 .pk-icon-arrow-up { background-image: url("../../assets/images/icon-arrow-up.svg"); }
 .pk-icon-arrow-down { background-image: url("../../assets/images/icon-arrow-down.svg"); }
 
-[class*='pk-icon-circle-'] {
+[class*='pk-icon-circle'] {
     width: 12px;
     height: 12px;
     border-radius: 50px;
-    background-color: @global-muted-color;
+    background: @global-muted-color;
 }
 
-.pk-icon-circle-primary { background-color: @global-primary-background; }
-.pk-icon-circle-success { background-color: @global-success-background; }
-.pk-icon-circle-danger { background-color: @global-danger-background; }
-.pk-icon-circle-warning { background-color: @global-warning-background; }
+.pk-icon-circle-primary { background: @global-primary-background; }
+.pk-icon-circle-success { background: @global-success-background; }
+.pk-icon-circle-danger { background: @global-danger-background; }
+.pk-icon-circle-warning { background: @global-warning-background; }
 
 /*
  * Icon Hover
