--- a/app/system/modules/finder/app/templates/thumbnail.html
+++ b/app/system/modules/finder/app/templates/thumbnail.html
@@ -1,8 +1,9 @@
-<ul v-if="items.length" class="uk-grid uk-grid-width-small-1-2 uk-grid-width-large-1-3 uk-grid-width-xlarge-1-4" data-uk-grid-margin data-uk-grid-match="{ target:'.uk-panel' }">
+<ul v-if="items.length" class="uk-grid uk-grid-match uk-grid-width-small-1-2 uk-grid-width-large-1-3 uk-grid-width-xlarge-1-4" data-uk-grid-margin>
     <li v-repeat="items | folders | searched" v-on="click: toggleSelect">
         <div class="uk-panel uk-panel-box uk-text-center">
-            <div class="uk-panel-teaser">
-                <div class="pk-thumbnail pk-thumbnail-folder"></div>
+            <div class="uk-panel-teaser uk-position-relative">
+                <div class="uk-cover-background uk-position-cover pk-thumbnail-folder"></div>
+                <canvas class="uk-responsive-width uk-display-block" width="800" height="600"></canvas>
             </div>
             <div class="uk-text-truncate">
                 <input type="checkbox" value="{{ name }}" v-checkbox="selected">
@@ -13,9 +14,10 @@
 
     <li v-repeat="items | files | searched" v-on="click: toggleSelect">
         <div class="uk-panel uk-panel-box uk-text-center">
-            <div class="uk-panel-teaser">
-                <div v-if="isImage(path)" class="pk-thumbnail" style="background-image: url('{{ encodeURI(url) }}');"></div>
-                <div v-if="!isImage(path)" class="pk-thumbnail pk-thumbnail-file"></div>
+            <div class="uk-panel-teaser uk-position-relative">
+                <div class="uk-cover-background uk-position-cover" v-if="isImage(path)" style="background-image: url('{{ encodeURI(url) }}');"></div>
+                <div class="uk-cover-background uk-position-cover pk-thumbnail-file" v-if="!isImage(path)"></div>
+                <canvas class="uk-responsive-width uk-display-block" width="800" height="600"></canvas>
             </div>
             <div class="uk-text-nowrap uk-text-truncate">
                 <input type="checkbox" value="{{ name }}" v-checkbox="selected">
