updated image picker markup

--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -62,7 +62,6 @@
 @import "alert.less";
 @import "thumbnail.less";
 @import "overlay.less";
-@import "progress.less";
 
 // JavaScript
 @import "dropdown.less";
@@ -73,6 +72,8 @@
 // Components: Common
 @import "form-advanced.less";
 @import "form-password.less";
+@import "placeholder.less";
+@import "progress.less";
 
 // Components: JavaScript
 @import "autocomplete.less";
