added icons calendar, info, users + updated extension view

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -152,6 +152,9 @@
 .pk-icon-reply { background-image: url("../../assets/images/icon-reply.svg"); }
 .pk-icon-calendar { background-image: url("../../assets/images/icon-calendar.svg"); }
 .pk-icon-time { background-image: url("../../assets/images/icon-time.svg"); }
+.pk-icon-info { background-image: url("../../assets/images/icon-info.svg"); }
+.pk-icon-users { background-image: url("../../assets/images/icon-users.svg"); }
+.pk-icon-select { background-image: url("../../assets/images/icon-select.svg"); }
 
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
 
