updated image picker markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -441,9 +441,13 @@
 }
 
 
+/* Image Preview (Image Picker)
+ ========================================================================== */
 
-
-
+.pk-image-max-height {
+    max-height: 200px;
+    overflow: hidden;
+}
 
 
 
