updated image + video pickers with placeholders

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -252,10 +252,10 @@
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
 
-/* Sub-modifier `pk-overlay-border`
+/* Sub-modifier `pk-overlay-border` (Editor, Image Picker, Post Image)
 ========================================================================== */
 
-.pk-overlay-border { border: 1px dashed #ddd; }
+.pk-overlay-border { border: 1px dashed @global-border; }
 
 
 /* Modifier `pk-table-large`
