fixed imagepicker for small images

--- a/app/system/modules/theme/less/uikit/overlay.less
+++ b/app/system/modules/theme/less/uikit/overlay.less
@@ -9,7 +9,7 @@
 
 @overlay-panel-color:                           @global-contrast-color;
 
-@overlay-panel-background:                      rgba(255,255,255,0.95);
+@overlay-panel-background:                      rgba(255,255,255,1);
 
 @overlay-icon-color:                            #aaa;
 
@@ -45,6 +45,6 @@
 
 .hook-overlay-misc() {
 
-    .uk-overlay:hover { min-height: 100px; }
+    .uk-overlay { min-height: 100px; }
 
 }
