removed box-shadow from Upload Drag'nDrop target

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -450,6 +450,12 @@
 }
 
 
+/* Remove `box-shadow` from Drag'n Drop target
+ ========================================================================== */
+
+.uk-dragover { box-shadow: none; }
+
+
 
 /* Dashboard view
  ========================================================================== */
