updated icons + permission icon within extension view

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -153,7 +153,7 @@
 .pk-icon-calendar { background-image: url("../../assets/images/icon-calendar.svg"); }
 .pk-icon-time { background-image: url("../../assets/images/icon-time.svg"); }
 .pk-icon-info { background-image: url("../../assets/images/icon-info.svg"); }
-.pk-icon-users { background-image: url("../../assets/images/icon-users.svg"); }
+.pk-icon-permission { background-image: url("../../assets/images/icon-permission.svg"); }
 .pk-icon-select { background-image: url("../../assets/images/icon-select.svg"); }
 
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
