cleanup site tree markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -155,6 +155,7 @@
 .pk-icon-info { background-image: url("../../assets/images/icon-info.svg"); }
 .pk-icon-permission { background-image: url("../../assets/images/icon-permission.svg"); }
 .pk-icon-select { background-image: url("../../assets/images/icon-select.svg"); }
+.pk-icon-home { background-image: url("../../assets/images/icon-home.svg"); }
 
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
 
@@ -265,6 +266,14 @@
 .pk-table-large td {
     padding-top: 28px;
     padding-bottom: 28px;
+}
+
+/* Modifier `pk-table-collapse`
+========================================================================== */
+
+.pk-table-collapse {
+    padding-left: 6px !important;
+    padding-right: 0 !important;
 }
 
 
