dashboard weather widget cleanup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -156,6 +156,8 @@
 .pk-icon-permission { background-image: url("../../assets/images/icon-permission.svg"); }
 .pk-icon-select { background-image: url("../../assets/images/icon-select.svg"); }
 .pk-icon-home { background-image: url("../../assets/images/icon-home.svg"); }
+.pk-icon-settings { background-image: url("../../assets/images/icon-settings.svg"); }
+.pk-icon-refresh { background-image: url("../../assets/images/icon-refresh.svg"); }
 
 .pk-icon-primary.pk-icon-comment { background-image: url("../../assets/images/icon-comment-primary.svg"); }
 
@@ -465,17 +467,3 @@
 .uk-dragover { box-shadow: none; }
 
 
-
-/* Dashboard view
- ========================================================================== */
-
-.pk-weather-image {
-    position: relative;
-    display: inline-block;
-}
-
-.pk-weather-temperature {
-    position: absolute;
-    top: 0;
-    right: -20px;
-}
